kubernetes/apps/network/cdn-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdn-proxy
spec:
  externalName: cdn.s3.${PRIVATE_DOMAIN}
  ports:
    - name: https
      port: &port 443
      protocol: TCP
      targetPort: *port
  type: ExternalName
